--- a/fhcustom.cfg
+++ b/fhcustom.cfg
@@ -1,5 +1,8 @@
 <mameconfig version="10">
 	<system name="default">
+		<!--
+			The 'default' system carries our basic control mappings, which can be overriden on a driver/game basis.
+		-->
 		<input>
 			<mapdevice device="XInput Player 1" controller="JOYCODE_1" />
 			<mapdevice device="XInput Player 2" controller="JOYCODE_2" />
@@ -37,6 +40,461 @@
 				buttons on PlayChoice-10.
 			-->
 
+			<!--
+				Default controller mappings for all games. Typically sane defaults that won't need to be overridden except for some specific oddball cases.
+				For instance, CPS1 and CPS2 are overridden to default to Street Fighter style layout to make those systems easier to work with.
+				Both analog and directional pad are mapped to stick.
+				As this config focused on XInput for the most part, which only supports 4 connected controllers, we're not mapping players 5/6 (e.g. X-Men)
+				If needed, those could be done as a per-game config as it's pretty rare to even need 4 players.
+				
+				Button layout is set to
+				5 6 7 8
+				1 2 3 4			with back mapping to coin, start mapping to start.
+			-->
+
+			<!--
+				Player 1
+			-->
+            <port type="P1_JOYSTICK_UP">
+                <newseq type="standard">
+                    JOYCODE_1_YAXIS_UP_SWITCH OR JOYCODE_1_DPADUP
+                </newseq>
+            </port>
+            <port type="P1_JOYSTICK_DOWN">
+                <newseq type="standard">
+                    JOYCODE_1_YAXIS_DOWN_SWITCH OR JOYCODE_1_DPADDOWN
+                </newseq>
+            </port>
+            <port type="P1_JOYSTICK_LEFT">
+                <newseq type="standard">
+                    JOYCODE_1_XAXIS_LEFT_SWITCH OR JOYCODE_1_DPADLEFT
+                </newseq>
+            </port>
+            <port type="P1_JOYSTICK_RIGHT">
+                <newseq type="standard">
+                    JOYCODE_1_XAXIS_RIGHT_SWITCH OR JOYCODE_1_DPADRIGHT
+                </newseq>
+            </port>
+            <port type="COIN1">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON8
+                </newseq>
+            </port>
+            <port type="START1">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON7
+                </newseq>
+            </port>
+		
+			<port type="P1_BUTTON1">
+				<newseq type="STANDARD">
+					JOYCODE_1_BUTTON1
+				</newseq>
+			</port>			
+			<port type="P1_BUTTON2">
+				<newseq type="STANDARD">
+					JOYCODE_1_BUTTON2
+				</newseq>
+			</port>			
+			<port type="P1_BUTTON3">
+				<newseq type="STANDARD">
+					JOYCODE_1_RZAXIS_POS_SWITCH
+				</newseq>
+			</port>			
+			<port type="P1_BUTTON4">
+				<newseq type="STANDARD">
+					JOYCODE_1_ZAXIS_POS_SWITCH
+				</newseq>
+			</port>			
+            <port type="P1_BUTTON5">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON3
+                </newseq>
+            </port>
+            <port type="P1_BUTTON6">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON4
+                </newseq>
+            </port>
+            <port type="P1_BUTTON7">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON6
+                </newseq>
+            </port>
+            <port type="P1_BUTTON8">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+
+			<!--
+				Player 2
+			-->
+            <port type="P2_JOYSTICK_UP">
+                <newseq type="standard">
+                    JOYCODE_2_YAXIS_UP_SWITCH OR JOYCODE_2_DPADUP
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_DOWN">
+                <newseq type="standard">
+                    JOYCODE_2_YAXIS_DOWN_SWITCH OR JOYCODE_2_DPADDOWN
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_LEFT">
+                <newseq type="standard">
+                    JOYCODE_2_XAXIS_LEFT_SWITCH OR JOYCODE_2_DPADLEFT
+                </newseq>
+            </port>
+            <port type="P2_JOYSTICK_RIGHT">
+                <newseq type="standard">
+                    JOYCODE_2_XAXIS_RIGHT_SWITCH OR JOYCODE_2_DPADRIGHT
+                </newseq>
+            </port>
+            <port type="COIN2">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON8
+                </newseq>
+            </port>
+            <port type="START2">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON7
+                </newseq>
+            </port>
+		
+			<port type="P2_BUTTON1">
+				<newseq type="STANDARD">
+					JOYCODE_2_BUTTON1
+				</newseq>
+			</port>			
+			<port type="P2_BUTTON2">
+				<newseq type="STANDARD">
+					JOYCODE_2_BUTTON2
+				</newseq>
+			</port>			
+			<port type="P2_BUTTON3">
+				<newseq type="STANDARD">
+					JOYCODE_2_RZAXIS_POS_SWITCH
+				</newseq>
+			</port>			
+			<port type="P2_BUTTON4">
+				<newseq type="STANDARD">
+					JOYCODE_2_ZAXIS_POS_SWITCH
+				</newseq>
+			</port>			
+            <port type="P2_BUTTON5">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON3
+                </newseq>
+            </port>
+            <port type="P2_BUTTON6">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON4
+                </newseq>
+            </port>
+            <port type="P2_BUTTON7">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON6
+                </newseq>
+            </port>
+            <port type="P2_BUTTON8">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+
+			<!--
+				Player 3
+			-->
+            <port type="P3_JOYSTICK_UP">
+                <newseq type="standard">
+                    JOYCODE_3_YAXIS_UP_SWITCH OR JOYCODE_3_DPADUP
+                </newseq>
+            </port>
+            <port type="P3_JOYSTICK_DOWN">
+                <newseq type="standard">
+                    JOYCODE_3_YAXIS_DOWN_SWITCH OR JOYCODE_3_DPADDOWN
+                </newseq>
+            </port>
+            <port type="P3_JOYSTICK_LEFT">
+                <newseq type="standard">
+                    JOYCODE_3_XAXIS_LEFT_SWITCH OR JOYCODE_3_DPADLEFT
+                </newseq>
+            </port>
+            <port type="P3_JOYSTICK_RIGHT">
+                <newseq type="standard">
+                    JOYCODE_3_XAXIS_RIGHT_SWITCH OR JOYCODE_3_DPADRIGHT
+                </newseq>
+            </port>
+            <port type="COIN3">
+                <newseq type="standard">
+                    JOYCODE_3_BUTTON8
+                </newseq>
+            </port>
+            <port type="START3">
+                <newseq type="standard">
+                    JOYCODE_3_BUTTON7
+                </newseq>
+            </port>
+		
+			<port type="P3_BUTTON1">
+				<newseq type="STANDARD">
+					JOYCODE_3_BUTTON1
+				</newseq>
+			</port>			
+			<port type="P3_BUTTON2">
+				<newseq type="STANDARD">
+					JOYCODE_3_BUTTON2
+				</newseq>
+			</port>			
+			<port type="P3_BUTTON3">
+				<newseq type="STANDARD">
+					JOYCODE_3_RZAXIS_POS_SWITCH
+				</newseq>
+			</port>			
+			<port type="P3_BUTTON4">
+				<newseq type="STANDARD">
+					JOYCODE_3_ZAXIS_POS_SWITCH
+				</newseq>
+			</port>			
+            <port type="P3_BUTTON5">
+                <newseq type="standard">
+                    JOYCODE_3_BUTTON3
+                </newseq>
+            </port>
+            <port type="P3_BUTTON6">
+                <newseq type="standard">
+                    JOYCODE_3_BUTTON4
+                </newseq>
+            </port>
+            <port type="P3_BUTTON7">
+                <newseq type="standard">
+                    JOYCODE_3_BUTTON6
+                </newseq>
+            </port>
+            <port type="P3_BUTTON8">
+                <newseq type="standard">
+                    JOYCODE_3_BUTTON5
+                </newseq>
+            </port>
+
+			<!--
+				Player 4
+			-->
+            <port type="P4_JOYSTICK_UP">
+                <newseq type="standard">
+                    JOYCODE_4_YAXIS_UP_SWITCH OR JOYCODE_4_DPADUP
+                </newseq>
+            </port>
+            <port type="P4_JOYSTICK_DOWN">
+                <newseq type="standard">
+                    JOYCODE_4_YAXIS_DOWN_SWITCH OR JOYCODE_4_DPADDOWN
+                </newseq>
+            </port>
+            <port type="P4_JOYSTICK_LEFT">
+                <newseq type="standard">
+                    JOYCODE_4_XAXIS_LEFT_SWITCH OR JOYCODE_4_DPADLEFT
+                </newseq>
+            </port>
+            <port type="P4_JOYSTICK_RIGHT">
+                <newseq type="standard">
+                    JOYCODE_4_XAXIS_RIGHT_SWITCH OR JOYCODE_4_DPADRIGHT
+                </newseq>
+            </port>
+            <port type="COIN4">
+                <newseq type="standard">
+                    JOYCODE_4_BUTTON8
+                </newseq>
+            </port>
+            <port type="START4">
+                <newseq type="standard">
+                    JOYCODE_4_BUTTON7
+                </newseq>
+            </port>
+		
+			<port type="P4_BUTTON1">
+				<newseq type="STANDARD">
+					JOYCODE_4_BUTTON1
+				</newseq>
+			</port>			
+			<port type="P4_BUTTON2">
+				<newseq type="STANDARD">
+					JOYCODE_4_BUTTON2
+				</newseq>
+			</port>			
+			<port type="P4_BUTTON3">
+				<newseq type="STANDARD">
+					JOYCODE_4_RZAXIS_POS_SWITCH
+				</newseq>
+			</port>			
+			<port type="P4_BUTTON4">
+				<newseq type="STANDARD">
+					JOYCODE_4_ZAXIS_POS_SWITCH
+				</newseq>
+			</port>			
+            <port type="P4_BUTTON5">
+                <newseq type="standard">
+                    JOYCODE_4_BUTTON3
+                </newseq>
+            </port>
+            <port type="P4_BUTTON6">
+                <newseq type="standard">
+                    JOYCODE_4_BUTTON4
+                </newseq>
+            </port>
+            <port type="P4_BUTTON7">
+                <newseq type="standard">
+                    JOYCODE_4_BUTTON6
+                </newseq>
+            </port>
+            <port type="P4_BUTTON8">
+                <newseq type="standard">
+                    JOYCODE_4_BUTTON5
+                </newseq>
+            </port>
 		</input>
 	</system>
+
+	<system name="cps1.c">
+		<!--
+			CPS1 mapping defaults to SF2-style controls. For cases where this doesn't work well, you can override on a per-game basis.
+			The mapping matches the defaults for SF4/SSF4/USF4/SF5 for an XInput arcade stick.
+			Bug: Currently punches and kicks are always getting swapped.
+		-->
+        <input>
+
+            <port tag=":IN1" type="P1_BUTTON1" mask="16" defvalue="16">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON3 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN1" type="P1_BUTTON2" mask="32" defvalue="32">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON4 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN1" type="P1_BUTTON3" mask="64" defvalue="64">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON6 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P1_BUTTON4" mask="1" defvalue="1">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON1 OR JOYCODE_1_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P1_BUTTON5" mask="2" defvalue="2">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON2 OR JOYCODE_1_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P1_BUTTON6" mask="4" defvalue="4">
+                <newseq type="standard">
+                    JOYCODE_1_RZAXIS_POS_SWITCH OR JOYCODE_1_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+
+            <port type="P2_BUTTON1">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON3 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port type="P2_BUTTON2">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON4 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port type="P2_BUTTON3">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON6 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port type="P2_BUTTON4">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON1 OR JOYCODE_2_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+            <port type="P2_BUTTON5">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON2 OR JOYCODE_2_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+            <port type="P2_BUTTON6">
+                <newseq type="standard">
+                    JOYCODE_2_RZAXIS_POS_SWITCH OR JOYCODE_2_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+        </input>
+    </system>
+
+	<system name="cps2.c">
+		<!--
+			CPS2, like CPS1, maps defaults to SF2-style controls. For cases where this doesn't work well, you can override on a per-game basis.
+			The mapping matches the defaults for SF4/SSF4/USF4/SF5 for an XInput arcade stick.
+			Bug: Currently punches and kicks are always getting swapped.
+		-->
+        <input>
+            <port type="P1_BUTTON1">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON3 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port type="P1_BUTTON2">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON4 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port type="P1_BUTTON3">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON6 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port type="P1_BUTTON4">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON1 OR JOYCODE_1_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+            <port type="P1_BUTTON5">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON2 OR JOYCODE_1_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+            <port type="P1_BUTTON6">
+                <newseq type="standard">
+                    JOYCODE_1_RZAXIS_POS_SWITCH OR JOYCODE_1_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+
+            <port type="P2_BUTTON1">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON3 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port type="P2_BUTTON2">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON4 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port type="P2_BUTTON3">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON6 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port type="P2_BUTTON4">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON1 OR JOYCODE_2_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+            <port type="P2_BUTTON5">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON2 OR JOYCODE_2_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+            <port type="P2_BUTTON6">
+                <newseq type="standard">
+                    JOYCODE_2_RZAXIS_POS_SWITCH OR JOYCODE_2_ZAXIS_POS_SWITCH
+                </newseq>
+            </port>
+        </input>
+    </system>
+
 </mameconfig>
