Fix CPS1/2 mapping
This fix to mapping allows XInput arcade sticks and gamepads to map directly to modern Street Fighter controls.

Non-fighting games on CPS1/2 will probably still require custom mappings.

Rationale: Fighting games are the bulk of the CPS1/2 library, and it ends up being easier to do per-game for the rest instead of the other way around.

--- a/fhcustom.cfg
+++ b/fhcustom.cfg
@@ -38,6 +38,10 @@
 
 				I use it for unusual controls that wouldn't normally be on an arcade stick; e.g. game selection on NeoGeo and the whole stack of extra control panel 
 				buttons on PlayChoice-10.
+				
+				Top Row:	On-Screen Display, Config Menu, Reset, UI Cancel, UI Select
+				Middle Row:	Save State, Load State, 
+				Bottom Row: System-specific functions (e.g. game selection on PC10/NeoGeo)
 			-->
 
 			<!--
@@ -351,149 +355,210 @@
 					JOYCODE_4_BUTTON5
 				</newseq>
 			</port>
+
+			<!--
+				MAME User Interface
+			-->
+            <port type="UI_ON_SCREEN_DISPLAY">
+                <newseq type="standard">
+                    KEYCODE_6_Q
+                </newseq>
+            </port>
+            <port type="UI_CONFIGURE">
+                <newseq type="standard">
+                    KEYCODE_6_W
+                </newseq>
+            </port>
+            <port type="UI_RESET_MACHINE">
+                <newseq type="standard">
+                    KEYCODE_6_E
+                </newseq>
+            </port>
+            <port type="UI_UP">
+                <newseq type="standard">
+                    KEYCODE_6_UP
+                </newseq>
+            </port>
+            <port type="UI_DOWN">
+                <newseq type="standard">
+                    KEYCODE_6_DOWN
+                </newseq>
+            </port>
+            <port type="UI_LEFT">
+                <newseq type="standard">
+                    KEYCODE_6_LEFT
+                </newseq>
+            </port>
+            <port type="UI_RIGHT">
+                <newseq type="standard">
+                    KEYCODE_6_RIGHT
+                </newseq>
+            </port>
+            <port type="UI_SELECT">
+                <newseq type="standard">
+                    KEYCODE_6_T
+                </newseq>
+            </port>
+            <port type="UI_CANCEL">
+                <newseq type="standard">
+                    KEYCODE_6_R
+                </newseq>
+            </port>
+            <port type="UI_SAVE_STATE">
+                <newseq type="standard">
+                    KEYCODE_6_A
+                </newseq>
+            </port>
+            <port type="UI_LOAD_STATE">
+                <newseq type="standard">
+                    KEYCODE_6_S
+                </newseq>
+            </port>
+			
 		</input>
 	</system>
 
-	<system name="cps1.c">
+	<system name="cps1.cpp">
 		<!--
 			CPS1 mapping defaults to SF2-style controls. For cases where this doesn't work well, you can override on a per-game basis.
 			The mapping matches the defaults for SF4/SSF4/USF4/SF5 for an XInput arcade stick.
-			Bug: Currently punches and kicks are always getting swapped.
 		-->
 		<input>
+            <port tag=":IN1" type="P1_BUTTON1" mask="16" defvalue="16">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON3 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN1" type="P1_BUTTON2" mask="32" defvalue="32">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON4 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN1" type="P1_BUTTON3" mask="64" defvalue="64">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON6 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P1_BUTTON4" mask="1" defvalue="1">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON1 OR JOYCODE_1_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P1_BUTTON5" mask="2" defvalue="2">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON2 OR JOYCODE_1_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P1_BUTTON6" mask="4" defvalue="4">
+                <newseq type="standard">
+                    JOYCODE_1_ZAXIS_NEG_SWITCH OR JOYCODE_1_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
+		</input>
 
-			<port tag=":IN1" type="P1_BUTTON1" mask="16" defvalue="16">
-				<newseq type="standard">
-					JOYCODE_1_BUTTON3 OR JOYCODE_1_BUTTON5
-				</newseq>
-			</port>
-			<port tag=":IN1" type="P1_BUTTON2" mask="32" defvalue="32">
-				<newseq type="standard">
-					JOYCODE_1_BUTTON4 OR JOYCODE_1_BUTTON5
-				</newseq>
-			</port>
-			<port tag=":IN1" type="P1_BUTTON3" mask="64" defvalue="64">
-				<newseq type="standard">
-					JOYCODE_1_BUTTON6 OR JOYCODE_1_BUTTON5
-				</newseq>
-			</port>
-			<port tag=":IN2" type="P1_BUTTON4" mask="1" defvalue="1">
-				<newseq type="standard">
-					JOYCODE_1_BUTTON1 OR JOYCODE_1_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
-			<port tag=":IN2" type="P1_BUTTON5" mask="2" defvalue="2">
-				<newseq type="standard">
-					JOYCODE_1_BUTTON2 OR JOYCODE_1_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
-			<port tag=":IN2" type="P1_BUTTON6" mask="4" defvalue="4">
-				<newseq type="standard">
-					JOYCODE_1_RZAXIS_POS_SWITCH OR JOYCODE_1_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
-
-			<port type="P2_BUTTON1">
-				<newseq type="standard">
-					JOYCODE_2_BUTTON3 OR JOYCODE_2_BUTTON5
-				</newseq>
-			</port>
-			<port type="P2_BUTTON2">
-				<newseq type="standard">
-					JOYCODE_2_BUTTON4 OR JOYCODE_2_BUTTON5
-				</newseq>
-			</port>
-			<port type="P2_BUTTON3">
-				<newseq type="standard">
-					JOYCODE_2_BUTTON6 OR JOYCODE_2_BUTTON5
-				</newseq>
-			</port>
-			<port type="P2_BUTTON4">
-				<newseq type="standard">
-					JOYCODE_2_BUTTON1 OR JOYCODE_2_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
-			<port type="P2_BUTTON5">
-				<newseq type="standard">
-					JOYCODE_2_BUTTON2 OR JOYCODE_2_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
-			<port type="P2_BUTTON6">
-				<newseq type="standard">
-					JOYCODE_2_RZAXIS_POS_SWITCH OR JOYCODE_2_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
+		<input>
+            <port tag=":IN1" type="P2_BUTTON1" mask="16" defvalue="16">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON3 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN1" type="P2_BUTTON2" mask="32" defvalue="32">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON4 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN1" type="P2_BUTTON3" mask="64" defvalue="64">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON6 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P2_BUTTON4" mask="1" defvalue="1">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON1 OR JOYCODE_2_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P2_BUTTON5" mask="2" defvalue="2">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON2 OR JOYCODE_2_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P2_BUTTON6" mask="4" defvalue="4">
+                <newseq type="standard">
+                    JOYCODE_2_ZAXIS_NEG_SWITCH OR JOYCODE_2_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
 		</input>
 	</system>
 
-	<system name="cps2.c">
+	<system name="cps2.cpp">
 		<!--
-			CPS2, like CPS1, maps defaults to SF2-style controls. For cases where this doesn't work well, you can override on a per-game basis.
+			CPS2 mapping defaults to SF2-style controls. For cases where this doesn't work well, you can override on a per-game basis.
 			The mapping matches the defaults for SF4/SSF4/USF4/SF5 for an XInput arcade stick.
-			Bug: Currently punches and kicks are always getting swapped.
 		-->
 		<input>
-			<port type="P1_BUTTON1">
-				<newseq type="standard">
-					JOYCODE_1_BUTTON3 OR JOYCODE_1_BUTTON5
-				</newseq>
-			</port>
-			<port type="P1_BUTTON2">
-				<newseq type="standard">
-					JOYCODE_1_BUTTON4 OR JOYCODE_1_BUTTON5
-				</newseq>
-			</port>
-			<port type="P1_BUTTON3">
-				<newseq type="standard">
-					JOYCODE_1_BUTTON6 OR JOYCODE_1_BUTTON5
-				</newseq>
-			</port>
-			<port type="P1_BUTTON4">
-				<newseq type="standard">
-					JOYCODE_1_BUTTON1 OR JOYCODE_1_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
-			<port type="P1_BUTTON5">
-				<newseq type="standard">
-					JOYCODE_1_BUTTON2 OR JOYCODE_1_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
-			<port type="P1_BUTTON6">
-				<newseq type="standard">
-					JOYCODE_1_RZAXIS_POS_SWITCH OR JOYCODE_1_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
+            <port tag=":IN1" type="P1_BUTTON1" mask="16" defvalue="16">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON3 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN1" type="P1_BUTTON2" mask="32" defvalue="32">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON4 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN1" type="P1_BUTTON3" mask="64" defvalue="64">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON6 OR JOYCODE_1_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P1_BUTTON4" mask="1" defvalue="1">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON1 OR JOYCODE_1_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P1_BUTTON5" mask="2" defvalue="2">
+                <newseq type="standard">
+                    JOYCODE_1_BUTTON2 OR JOYCODE_1_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P1_BUTTON6" mask="4" defvalue="4">
+                <newseq type="standard">
+                    JOYCODE_1_ZAXIS_NEG_SWITCH OR JOYCODE_1_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
+		</input>
 
-			<port type="P2_BUTTON1">
-				<newseq type="standard">
-					JOYCODE_2_BUTTON3 OR JOYCODE_2_BUTTON5
-				</newseq>
-			</port>
-			<port type="P2_BUTTON2">
-				<newseq type="standard">
-					JOYCODE_2_BUTTON4 OR JOYCODE_2_BUTTON5
-				</newseq>
-			</port>
-			<port type="P2_BUTTON3">
-				<newseq type="standard">
-					JOYCODE_2_BUTTON6 OR JOYCODE_2_BUTTON5
-				</newseq>
-			</port>
-			<port type="P2_BUTTON4">
-				<newseq type="standard">
-					JOYCODE_2_BUTTON1 OR JOYCODE_2_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
-			<port type="P2_BUTTON5">
-				<newseq type="standard">
-					JOYCODE_2_BUTTON2 OR JOYCODE_2_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
-			<port type="P2_BUTTON6">
-				<newseq type="standard">
-					JOYCODE_2_RZAXIS_POS_SWITCH OR JOYCODE_2_ZAXIS_POS_SWITCH
-				</newseq>
-			</port>
+		<input>
+            <port tag=":IN1" type="P2_BUTTON1" mask="16" defvalue="16">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON3 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN1" type="P2_BUTTON2" mask="32" defvalue="32">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON4 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN1" type="P2_BUTTON3" mask="64" defvalue="64">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON6 OR JOYCODE_2_BUTTON5
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P2_BUTTON4" mask="1" defvalue="1">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON1 OR JOYCODE_2_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P2_BUTTON5" mask="2" defvalue="2">
+                <newseq type="standard">
+                    JOYCODE_2_BUTTON2 OR JOYCODE_2_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
+            <port tag=":IN2" type="P2_BUTTON6" mask="4" defvalue="4">
+                <newseq type="standard">
+                    JOYCODE_2_ZAXIS_NEG_SWITCH OR JOYCODE_2_RZAXIS_NEG_SWITCH
+                </newseq>
+            </port>
 		</input>
 	</system>
 
